Added an explanation to the home screen on how I set up OIDC in AWS to automatically allow GitHub to sync my site to the S3 bucket this site is being hosted in.

--- a/index.html
+++ b/index.html
@@ -266,6 +266,17 @@
             </div>
         </section>
 
+        <section 
+            id="portfolio-explanation"
+            class="portfolio-explanation-wrapper"
+        >
+            <div class="portfolio-explanation-container">
+                <p class="portfolio-explanation">
+                    This project is hosted in an S3 bucket, which is synced to my <a href="https://github.com/jcroft0827/josephcroft-portfolio-2025">GitHub</a> repository using OpenID Connect (OIDC) and a role that allows the <a href="https://github.com/jcroft0827/josephcroft-portfolio-2025">GitHub</a> repository to automatically sync this code to the bucket.
+                </p>
+            </div>
+        </section>
+
         <section id="projects-section-home" class="projects-section-home">
             <h2>Projects</h2>
             <div id="projects-section-wrapper" class="projects-section-wrapper">
